Closed Bug 1541920 Opened 7 years ago Closed 7 years ago

Khan Academy US front page correctness problem with SVG multiply

Categories

(Core :: Graphics: WebRender, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla68
Tracking Status
firefox67 --- verified
firefox68 --- verified

People

(Reporter: chutten, Assigned: jrmuizel)

References

()

Details

Attachments

(2 files)

At https://www.khanacademy.org/?country=US a little way down there is an illustration of a bar chart next to some colourful "design blobs". (Look for the blue button that says "Districts, start here")

The yellow "design blob" should multiply with the barchart but with gfx.webrender.all set to true it instead obscures the chart.

Could be some symptom of bug 1455427

Blocks: wr-67
Priority: -- → P2

We understand how to fix this. I should have a patch up today.

Assignee: nobody → jmuizelaar
Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/57538e81d06b Handle blend mode activeness properly. r=mstange
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

Comment on attachment 9056207 [details]
Bug 1541920. Handle blend mode activeness properly.

Beta/Release Uplift Approval Request

  • Feature/Bug causing the regression: None
  • User impact if declined: There will be some correctness issues with SVG drawn by WebRender. This shows up on the Kahn academy page.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Medium
  • Why is the change risky/not risky? (and alternatives if risky): This change is not too risky. It's a relatively small change, covered by tests and changes the code to act more like the non-WebRender path
  • String changes made/needed:
Attachment #9056207 - Flags: approval-mozilla-beta?

Note, this change only affects the WebRender code path, so if it ended up breaking something we always have the option of turning WebRender off.

Comment on attachment 9056207 [details]
Bug 1541920. Handle blend mode activeness properly.

Webrender V1 ships with 67 + low risk patch with tests, approved for 67 beta 10.

Since we have a testcase, I'd like some manual QA once it is on beta.

Attachment #9056207 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

I have reproduced this issue using Firefox 68.0a1 (2019.04.04) on Win 10 x64 with WebRender.
I can confirm this issue is fixed, I verified using Firefox 68.0a1 latest nightly and 67.0b10 on Win 10 x64.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: