Bug 1541920. Handle blend mode activeness properly. r=mstange a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D26364